refactor: restructure layout and page components, update global styles

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,6 +52,6 @@
   }
   
   body {
-    @apply bg-background text-foreground font-primary;
+    @apply bg-primary text-white leading-loose font-primary;
   }
 }
